<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             tools:context="mody.vkmusic.Fragments.MusicSwitchControls">

    <Button
            android:id="@+id/player_prev_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_previous_song"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/player_pause_play"/>
    <Button
            android:id="@+id/player_pause_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_pause"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
    <Button
            android:id="@+id/player_next_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_next_song"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/player_pause_play"/>

</RelativeLayout>
