<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="mody.vkmusic.Fragments.PlayerHeader">

    <Button
            android:id="@+id/player_backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/BackButton"
            />

    <RelativeLayout
            android:id="@+id/player_song_title"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            >
        <TextView
                android:id="@+id/player_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:singleLine="true"
                />
        <TextView
                android:id="@+id/player_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:singleLine="true"
                />

    </RelativeLayout>
    <TextView
            android:id="@+id/player_song_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/player_song_title"
            />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/player_song_number"
            android:id="@+id/player_seeker_keeper"
            android:paddingBottom="15dip"
            android:paddingTop="15dip"
            >
        <TextView
                android:id="@+id/player_progress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:paddingRight="12dip"
                android:paddingLeft="12dip"
                />
        <SeekBar
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/player_song_progressBar"
                android:layout_weight="1"
                />
        <TextView
                android:id="@+id/player_to_finish"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:paddingRight="12dip"
                android:paddingLeft="12dip"
                />
    </LinearLayout>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/player_backgroundKeeper"
        android:layout_below="@+id/player_seeker_keeper"
        android:orientation="vertical"
        >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/player_subWrapper"
                android:orientation="vertical"
                >



        <LinearLayout
                android:background="#4d000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/player_header_controls"
                >
                <Button
                        android:id="@+id/player_random"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/PlayerHeaderControlsButtons"
                        android:text="@string/player_next_simple"
                        />
                <Button
                        android:id="@+id/player_repeat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/PlayerHeaderControlsButtons"
                        android:text="@string/player_repeat_no_repeat"
                        />
                <Button
                        android:id="@+id/player_lyricsControl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/PlayerHeaderControlsButtons"
                        android:text="@string/player_lyrics_show"/>
        </LinearLayout>
        <TextView
                android:background="#78000000"
                android:paddingTop="15dip"
                android:paddingStart="15dip"
                android:paddingEnd="15dip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/player_lyrics"
                android:textColor="@color/vk_white"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:scrollbars="horizontal"
                android:maxLines="35"
                android:visibility="invisible"
                />
        </LinearLayout>
</LinearLayout>

</RelativeLayout>
